# TechnoSphereProjects

Logger/: CMakeLists.txt
Logger/include/: BaseLogger.h  FileLogger.h  StderrLogger.h  StdoutLogger.h
Logger/src/: BaseLogger.cpp  FileLogger.cpp  StderrLogger.cpp  StdoutLogger.cpp
Logger/test/: main.cpp
Process/: CMakeLists.txt
Process/include/: FileDesc.h  Process.h
Process/src/: FileDesc.cpp  Process.cpp
Process/test/: TestProg.cpp  main.cpp
Tcp/: CMakeLists.txt
Tcp/include/: Client.h  Connection.h  ConnectionUtils.h  Server.h  TcpConnection.h
Tcp/src/: Client.cpp  Connection.cpp  ConnectionUtils.cpp  Server.cpp  TcpConnection.cpp
