cmake_minimum_required (VERSION 3.8)
project (Process)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED True)
include_directories(include)
add_library (Process src/Process.cpp src/FileDesc.cpp)
add_executable (Test test/main.cpp)
target_link_libraries (Test Process)
add_executable (TestProg test/TestProg.cpp)
